assets/css/style.css
/* CSS Variable */
:root {
    --primary-color: #F21E30;
    --secondary-color: #090000;
    --black-font-color: #333333;
}
/* CSS Variable */

/* Load Font */
@font-face {
    src: url("../font/agave.ttf");
    font-family: "agave Nerd Font";
}
/* #Load Font */

*, *::before, *::after {
    font-family: "agave Nerd Font", sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

a {
    text-decoration: none;
    color: var(--black-font-color);
}

ul {
    list-style: none;
}

html {
    display: flex;
    justify-content: center;
    min-width: 100vw;
    overflow-x: hidden;
}

body {
    color: var(--black-font-color);
    line-height: 1.5;
    width: 1366px;
}

h1, h2 {
    font-weight: 300;
    line-height: 1.2;
    margin: 8px 0;
}

p {
    margin: 10px 0;
}

img {
    width: 100%;
}

/* Navbar */
.navbar {
    background-color: var(--primary-color);
    height: 75px;
    color: white;
}

.navbar .flex {
    justify-content: center;
    align-items: center;
}

.navbar h1 {
    font-weight: bold;
}

.navbar ul {
    display: flex;
}

.navbar ul li {
    font-size: 1.5rem;
}

.navbar a {
    color: white;
    padding: 6px 12px;
    margin: 0;
}

.navbar a:hover {
    border-bottom: 2px solid white;
}

.navbar .flex {
    justify-content: space-between;
}
/* #Navbar */

/* Showcases */
.showcases {
    position: relative;
    height: 420px;
    background-color: var(--primary-color); 
    color: white;
}

.showcases#page-home::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100px;
    background-color: white;
    bottom: -110px;
    transform: skewY(-6deg);
}

.showcases#page-home::after {
    content: "";
    position: absolute;
    width: 100%;
    height: 100px;
    background-color: white;
    bottom: -100px;
    transform: skewY(3deg);
}

.showcases h1 {
    font-size: 2.8rem;    
}

.showcases p {
    margin: 20px 0;
}

.showcases .grid {
    overflow: visible;
    grid-template-columns: 2fr 1fr;
}

.showcase-form {
    position: relative;
    top: 70px;
    height:  350px;
    overflow: visible;
    width: 400px;
    padding: 2.5rem;
    z-index: 100;
}

.showcase-form .form-control {
    margin: 30px 0;
}

.showcase-form .form-control input[type="text"], .showcase-form .form-control input[type="email"] {
    border: 0;
    border-bottom: 1.5px solid black;
    width: 100%;
    padding: 4px;
    font-size: 1.2rem;
}

.showcase-form .form-control input:focus {
    outline: none;
    border-bottom: 2px solid black;
}

.showcase-form .form-control.flex {
    justify-content: right;
}
/* #Showcases */

/* Stats */
.stats {
    position: relative;
    z-index: 2;
    padding-top: 100px;
}

.stats .stats-head {
    padding: 0 50px;
}

.stats .stats-body h2 {
    font-weight: bold;
}
/* #Stats */

/* Easy Deployment */
section.easyDeploy {
    background-color: var(--primary-color);
    padding: 60px 0;
    color: white;
    text-align: center;
}

section.easyDeploy .grid {
    grid-template-columns: 3fr 2fr;
}

section.easyDeploy .container > *:nth-child(2) {
    color: white;
    display: flex;
    justify-content: center;
}

section.easyDeploy .container > *:first-child { 
   font-weight: bold; 
}

section.easyDeploy .container i {
    margin: 0 1rem;
    align-self: center;
    display: flex;
}

section.easyDeploy .container > *:last-child > i {
    font-size: 100px;
}

section.easyDeploy .container > *:last-child > i:nth-child(2) {
    font-size: 150px;
    top: 0;
}
/* #Easy Deployment */

/* CLI */
section.cli {
    padding: 80px 0;
}

section.cli .cli-img {
    max-width: 500px;
}

section.cli .card {
    padding: 0.2rem 1rem;
    background-color: white;
    font-weight: normal;
    color: black;
    box-shadow: 0px 2px 6px rgb(0 0 0 / 40%);
    transition: all 200ms ease-out;
}

section.cli .card:hover {
    background-color: var(--primary-color);
    color: white;
    font-weight: bold;
    box-shadow: 0px 0px 0px rgb(0 0 0 / 0);
    transform: translateX(10px);
}

section.cli .grid {
    gap: 10px;
}

section.cli .grid > *:first-child {
    grid-column: 1 / span 2;
    grid-row: 1 / span 2;
    justify-self: center;
}
/* #CLI */

/* Languages */
section.lang {
    padding: 80px 0;
    background-color: whitesmoke;
}

section.lang h2 {
    font-weight: bolder;
    margin-bottom: 30px;
}

section.lang .card {
    margin: 10px;
    padding: 10px 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    box-shadow: 0px 0px 5px rgb(0 0 0 / 30%);
    transition: all 200ms ease-in;
}

section.lang .card:hover {
    transform: translateY(-10px);
    box-shadow: 0px 5px 5px rgb(0 0 0 / 30%);
}

section.lang .card img {
    max-width: 100px;
}
/* #Languages */

/* Footer */
footer {
    background-color: var(--secondary-color);
}

footer .container {
    justify-content: space-around;
    padding: 80px 0;
}

footer .container > * {
    align-self: center;
}

footer .container > *:first-child > * {
    color: white;
    font-weight: bold;
}

footer .container > *:nth-child(2) {
    border-left: 5px solid white;
    padding-left: 10px;
}

footer .container > *:nth-child(2) a {
    font-size: 1.5rem;
    display: inline-block;
    color: white;
    transition: all 150ms ease;
}

footer .container > *:nth-child(2) a:hover {
    transform: translateX(5px);
}

footer .container > *:last-child a {
    color: white;
    display: inline-block;
    font-size: 2.5rem;
    margin: 0 5px;
    transition: all 150ms ease;
}

footer .container > *:last-child a:hover {
    transform: translateY(-6px);
}
/* #Footer */

/* ------------- */

/* Page-Features */
/* Showcase Features */
section.showcases {
    height: initial;
    padding: 50px 0;
}

section.showcases .grid {
    grid-template-columns: 2fr 1fr;
}

section.showcases i {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 150px;
}

section.showcases i::before {
    border: 6px solid white;
    border-radius: 100%;
    padding: 25px;
}

section.feature-detail {
    background-color: whitesmoke;
    padding: 50px 0;;
}

section.feature-detail h2 {
    font-size: 2.2rem;
}

section.feature-detail p {
    font-size: 1.2rem;
    line-height: 2rem;
}

section.feature-part .container {
    padding: 50px 10px;
    grid-template-columns: repeat(3, 1fr);
}

section.feature-part .container .card {
    justify-content: center;
    align-items: center;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
    padding: 1.5rem;
}

section.feature-part .container .card > i {
    margin-right: 20px;
    font-size: 3rem;
}

section.feature-part .container .card:first-child {
    grid-column: 1 / span 3;
}

section.feature-part .container .card:nth-child(2) {
    grid-column: 1 / span 2;
}

/* ---------- */

/* Page Documentation */

section.showcases#doc i::before {
    border: none;
}

section.doc .container {
    padding: 50px 20px;
    grid-template-columns: 1fr 2fr;
    gap: 30px;
}

section.doc .container .card {
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
}

section.doc #doc-menu {
    align-self: flex-start;
    background-color: whitesmoke;
}

section.doc #doc-menu h3 {
    margin-bottom: 8px;
}

section.doc #doc-menu ul li {
    padding: 2px 0;
    border-bottom: 1px solid black;
}

section.doc #doc-content hr {
    margin: 20px 0;
}

section.doc #doc-content pre {
    padding: 10px;
    background-color: var(--secondary-color);
    color: white;
}

/* Media Query */
@media only screen and (max-width: 768px) {
    body {
        max-width: 100vw;
    }

    .showcases#page-home {
        height: 580px;
    }

    .showcases#page-home .container {
        grid-template-columns: 1fr;
    }

    .showcases#page-home .showcase-text {
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;
    }

    .showcases#page-home .showcase-text p {
        margin-top: 10px;
    }

    .showcases#page-home .container .showcase-form {
        justify-self: center;
        top: 20px;
    }

    section.easyDeploy .container > *:last-child > i {
        font-size: 50px;
    }
    
    section.easyDeploy .container > *:last-child > i:nth-child(2) {
        font-size: 100px;
    }
}

@media only screen and (max-width: 500px) {
    .container {
        padding: 40px 20px;
    }

    .navbar {
        height: 115px;;
    }

    .navbar .container {
        flex-direction: column;
        justify-content: center;
        align-items: center;    
    }

    section.showcases {
        padding: 20px 0;
    }

    section.showcases .container {
       grid-template-columns: 1fr;
       text-align: center;
       padding: 10px 20px;
    }

    section.showcases .container i {
        font-size: 50px;
        grid-row: 1;
     }

    .stats-body {
        grid-template-columns: 1fr;
    }

    section.easyDeploy {
        padding: 40px 0;
    }

    section.easyDeploy .container {
        grid-template-columns: 1fr;
    }

    section.easyDeploy .container > *:last-child {
        margin-top: 20px;
    }

    section.easyDeploy .container > *:last-child > i:nth-child(2) {
        font-size: 50px;
    }
    
    section.cli {
        padding: 40px 0;
    }

    section.cli .container {
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 0.5fr 0.5fr;
        gap: 10px;
    }

    section.cli .grid > *:first-child {
        grid-column: 1;
        grid-row: 1;
    }

    section.cli .grid > *:nth-child(2) {
        grid-column: 1;
    }

    section.lang {
        padding: 40px 0;
    }

    footer .container {
        padding: 40px 0;
    }

    footer .container div:last-child {
        display: flex;
        flex-direction: column;
        margin-top: 20px;
    }

    footer .container div:last-child a {
        font-size: 20px;
    }

    footer .container > *:nth-child(2) {
        border-top: 5px solid white;
        padding-top: 10px;
        border-left: none;
    }

    section.feature-part .container {
        grid-template-columns: 1fr;
    }

    section.feature-part .container .card:first-child {
        grid-column: 1;
    }
    
    section.feature-part .container .card:nth-child(2) {
        grid-column: 1;
    }

    section.showcases#doc i::before {
        border: solid;
    }

    section.doc .container {
       grid-template-columns: 1fr;
    }
}

@media only screen and (max-width: 445px) {
    section.showcases .showcase-form {
        width: 85vw;
    }

    section.feature-part .container .card {
        flex-direction: column;
        text-align: center;
    }
}

